<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nama"
        android:layout_width="263dp"
        android:layout_height="20dp"
        android:text="@string/nama"
        />

    <TextView
        android:id="@+id/nim"
        android:layout_width="261dp"
        android:layout_height="22dp"
        android:text="@string/nim"
         />

    <TextView
        android:id="@+id/alamat"
        android:layout_width="262dp"
        android:layout_height="22dp"
        android:text="@string/alamat"
         />

    <TextView
        android:id="@+id/telp"
        android:layout_width="263dp"
        android:layout_height="20dp"
        android:text="@string/telp"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="264dp"
        android:layout_height="22dp"
        android:text="@string/email"
        />
    <ImageView
        android:id="@+id/photo"
        android:layout_width="166dp"
        android:layout_height="216dp"
        android:src="@string/photo"
        />
</LinearLayout>